--- a/src/theme/comment.css
+++ b/src/theme/comment.css
@@ -27,7 +27,6 @@
 	display: grid;
 	grid-template-columns: 4fr 2fr;
 	height: auto !important;
-	justify-items: center;
 	grid-gap: 20px;
 	align-items: center;
 	padding: 0;
@@ -54,6 +53,28 @@
 	background-position: center;
 }
 
+
+
+.grid-content i {
+	font-size: 20px;
+}
+
 .grid-content {
-	
+	display: grid;
+	grid-template-columns: 5fr 2fr;
+	align-items: center;
+	padding: 0;
+}
+
+.grid-content .text-content {
+	display: grid;
+	grid-template-rows: 1fr 4fr;
+	grid-gap: 10%;
+}
+
+.icon {
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 350%;
+	color: white;
 }
