--- a/src/theme/detail.css
+++ b/src/theme/detail.css
@@ -16,13 +16,26 @@
 
 .grid-detail {
 	display: grid;
-	grid-template-columns: 1fr 4fr;
+	grid-template-columns: 1fr 1fr 3fr;
 	padding: 5%;
+	grid-gap: 2%;
+	align-items: center;
+	text-align: center;
+}
+
+.grid-detail .back {
+	font-size: 200%;
+	text-align: center;
 }
 
 
 .grid-detail .text {
 	margin: auto;
-	font-size: 100%;
+	font-size: 90%;
 	text-align: center;
+}
+
+
+.add {
+	color: white;
 }
