audio recording page css done and props push,
ho finito la pagina di registrazione vocale e fotocamera, devo verificare che la pagina mi trasporti sia i props audio che i props della foto

--- a/src/theme/detail.css
+++ b/src/theme/detail.css
@@ -12,6 +12,10 @@
   color: rgba(241, 241, 241, 0.9);
   padding-bottom: 2%;
 }
+.sound-wave {
+  height: 50%;
+  width: 100%;
+}
 
 .grid-detail {
   display: grid;
