--- a/src/theme/select.css
+++ b/src/theme/select.css
@@ -1,19 +1,21 @@
 .detail-header {
-	text-align: center;
-	font-size: 140%;
+  text-align: center;
+  font-size: 140%;
 }
 
 .grid-select {
-	display: grid;
-	grid-template-rows: 1fr 1fr 1fr 1fr;
-	height: 500px;
-	width: auto;
-	margin-top: 50px;
-	text-align: center;
-
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  height: 500px;
+  width: auto;
+  margin-top: 50px;
+  text-align: center;
+}
+span {
+  color: white;
 }
 
 .grid-select .grid-button {
-	display: grid;
-	grid-template-rows: 1fr 1fr;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
 }
